# Embedded_LD19

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATE.md  README.md  THIRD_PARTY_LICENSES.md  setup.sh
.claude/: settings.local.json
embedded/: README.md
include/: background_filter.h  camera_module.h  cluster_tracker.h  event_notifier.h  json_packet.h  kalman_filter.h  ld19_lidar.h  ldlidar_driver.h  pir_sensor.h  scan_processor.h  udp_sender.h
server/: main.py
src/: background_filter.cpp  camera_module.cpp  cluster_tracker.cpp  event_notifier.cpp  json_packet.cpp  ld19_lidar.cpp  main.cpp  pir_sensor.cpp  scan_processor.cpp  sim_main.cpp  udp_sender.cpp
unity/: LD19JsonReceiver.cs  LD19Receiver.cs
